# replicate-dupuy-galichon-qe-2022

./: .gitignore  README.md  dupuy_galichon_2022.py  estimates.csv  matching.py  pyproject.toml  run_1st_simulations.py  run_2nd_simulation.py  run_replication.py  run_simulations.py
module/: __init__.py  build_readme.py  dupuy_galichon_2022.py  matching.py
output/: README.template.md  covariate_stats.md  covariate_stats_matlab.md  covariate_stats_standardize_False.md  covariate_stats_standardize_True.md  estimated_moments.md  estimated_moments_constant_False_centering_True.md  estimated_moments_constant_False_scale_False.md  estimated_moments_constant_False_standardize_False.md  estimated_moments_constant_False_standardize_True.md  estimated_moments_constant_True_scale_True_MatLab_False.md  estimated_moments_constant_True_scale_True_centering_False.md  estimated_moments_constant_True_standardize_False.md  estimated_moments_constant_True_standardize_True.md  estimated_parameters.md  estimated_parameters_constant_False_centering_False.md  estimated_parameters_constant_False_centering_True.md  estimated_parameters_constant_False_scale_False.md  estimated_parameters_constant_False_scale_True.md  estimated_parameters_constant_False_standardize_False.md  estimated_parameters_constant_False_standardize_True.md  estimated_parameters_constant_True_scale_True_MatLab_False.md  estimated_parameters_constant_True_scale_True_centering_False.md  estimated_parameters_constant_True_standardize_False.md  estimated_parameters_constant_True_standardize_True.md  estimates.md  objective.md  (+16 more)
(+4 files in other folders)
