[project]
name = "replicate-dupuy-galichon-qe-2022"
version = "0.1.0"
description = "This project is a replication study of Dupuy and Galichon (2022, Quantitative Economics)."
authors = [
    { name="Esben Scriver Andersen", email="esbenscriver@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.7.2",
    "jaxopt>=0.8.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "simple-pytree>=0.2.2",
    "squarem-jaxopt>=0.1.3",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
